namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-manage-recaalls-prototype-history/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-manage-recaalls-prototype-history
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ppud-replacement"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "PPUD replacement: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-manage-recaalls-prototype-history"
    cloud-platform.justice.gov.uk/team-name: "hmpps-manage-recalls-prototype-history-write-team"
    cloud-platform.justice.gov.uk/review-after: ""
